--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,54 +1,27 @@
-{% extends 'guestbook/base.html' %}
-{% load static %}
+{% extends 'tasks/base.html' %}
 
-  {% block content %}
-  <link rel="stylesheet" href="{% static 'assets/css/regis.css' %}">
-
-  <div class="wrapper">
-    <h2>Registration</h2>
-
-    <form method="POST" action="{% url 'register' %}">
-      {% csrf_token %}
-
-      {% if form.non_field_errors %}
-        <div class="error">
-          {% for error in form.non_field_errors %}
-            <p>{{ error }}</p>
-          {% endfor %}
+{% block content %}
+<section>
+    <h2>Регистрация</h2>
+    <form method="post">
+        {% csrf_token %}
+        <div class="fields">
+            <div class="field">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required />
+            </div>
+            <div class="field">
+                <label for="password1">Пароль</label>
+                <input type="password" name="password1" id="password1" required />
+            </div>
+            <div class="field">
+                <label for="password2">Подтвердите пароль</label>
+                <input type="password" name="password2" id="password2" required />
+            </div>
         </div>
-      {% endif %}
-
-
-      <div class="input-box">
-        <input type="email" name="email" placeholder="Введите email" required
-               value="{{ form.email.value|default_if_none:'' }}">
-        {% if form.email.errors %}
-          <div class="error">{{ form.email.errors }}</div>
-        {% endif %}
-      </div>
-
-      <div class="input-box">
-        <input type="password" name="password1" placeholder="Создайте пароль" required>
-        {% if form.password1.errors %}
-          <div class="error">{{ form.password1.errors }}</div>
-        {% endif %}
-      </div>
-
-      <div class="input-box">
-        <input type="password" name="password2" placeholder="Подтвердите пароль" required>
-        {% if form.password2.errors %}
-          <div class="error">{{ form.password2.errors }}</div>
-        {% endif %}
-      </div>
-
-      <div class="input-box button">
-        <input type="submit" value="Зарегистрироваться">
-      </div>
-
-      <div class="text">
-        <h3>Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></h3>
-      </div>
+        <ul class="actions">
+            <li><input type="submit" value="Зарегистрироваться" class="primary" /></li>
+        </ul>
     </form>
-  </div>
-
-  {% endblock %}
+</section>
+{% endblock %}
