--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,23 +1,30 @@
 {% extends 'tasks/base.html' %}
 
+{% block title %}Вход в систему{% endblock %}
+
 {% block content %}
 <section>
-    <h2>Вход</h2>
+    <header class="major">
+        <h2>Вход в систему</h2>
+    </header>
     <form method="post">
         {% csrf_token %}
-        <div class="fields">
-            <div class="field">
-                <label for="username">Email / Имя пользователя</label>
-                <input type="text" name="username" id="username" required />
+        <div class="row gtr-uniform">
+            <div class="col-12">
+                <label for="username">Имя пользователя</label>
+                <input type="text" name="username" id="username" required placeholder="Введите ваш логин" />
             </div>
-            <div class="field">
+            <div class="col-12">
                 <label for="password">Пароль</label>
-                <input type="password" name="password" id="password" required />
+                <input type="password" name="password" id="password" required placeholder="Введите ваш пароль" />
+            </div>
+            <div class="col-12">
+                <ul class="actions">
+                    <li><button type="submit" class="button primary icon solid fa-sign-in-alt">Войти</button></li>
+                    <li><a href="{% url 'register' %}" class="button">Регистрация</a></li>
+                </ul>
             </div>
         </div>
-        <ul class="actions">
-            <li><input type="submit" value="Войти" class="primary" /></li>
-        </ul>
     </form>
 </section>
 {% endblock %}
