--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,27 +1,34 @@
 {% extends 'tasks/base.html' %}
 
+{% block title %}Регистрация{% endblock %}
+
 {% block content %}
 <section>
-    <h2>Регистрация</h2>
+    <header class="major">
+        <h2>Регистрация нового пользователя</h2>
+    </header>
     <form method="post">
         {% csrf_token %}
-        <div class="fields">
-            <div class="field">
+        <div class="row gtr-uniform">
+            <div class="col-12">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" required />
+                <input type="email" name="email" id="email" required placeholder="Введите ваш email" />
             </div>
-            <div class="field">
+            <div class="col-12">
                 <label for="password1">Пароль</label>
-                <input type="password" name="password1" id="password1" required />
+                <input type="password" name="password1" id="password1" required placeholder="Придумайте пароль" />
             </div>
-            <div class="field">
-                <label for="password2">Подтвердите пароль</label>
-                <input type="password" name="password2" id="password2" required />
+            <div class="col-12">
+                <label for="password2">Подтверждение пароля</label>
+                <input type="password" name="password2" id="password2" required placeholder="Повторите пароль" />
+            </div>
+            <div class="col-12">
+                <ul class="actions">
+                    <li><button type="submit" class="button primary icon solid fa-user-plus">Зарегистрироваться</button></li>
+                    <li><a href="{% url 'login' %}" class="button">Уже есть аккаунт?</a></li>
+                </ul>
             </div>
         </div>
-        <ul class="actions">
-            <li><input type="submit" value="Зарегистрироваться" class="primary" /></li>
-        </ul>
     </form>
 </section>
 {% endblock %}
